syntax = "proto3";

import "common.proto";

package user_notifications;


// --- UserNotifications.addNotification ---
message AddNotificationRequestBody {
	message NotificationOpts {
		common.StringValue title = 1;
		common.StringValue body = 2;
	}
	NotificationOpts opts = 1;
}
message AddNotificationReplyBody {
	uint64 notification_id = 1;
}

// --- UserNotifications.removeNotification ---
// Reply body is empty
message RemoveNotificationRequestBody {
	uint64 id = 1;
}

// --- UserNotifications.watch ---
// Requst body is empty
// Its an observable call, events are UserNotificationEvent's

message UserNotificationEvent {
	uint64 notification_id = 1;
	string type = 2;
	bool focus_app_window = 3;
}
